# mongo-c-driver

./: .benchmark.yml  .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .lsan-suppressions  .mci.yml  .travis.yml  .tsan-suppressions  AGENTS.md  AUTHORS  CMakeLists.txt  CNAME  CONTRIBUTING.md  ChangeLog  Earthfile  HISTORY.md  LoadTests.cmake  Makefile  Makefile.am  NEWS  README  README.md  README.rst  RELEASE.md  SConstruct  THIRD_PARTY_NOTICES  TODO.md  TUTORIAL.md  VERSION_CURRENT  acinclude.m4  autogen.sh  check_int64.sh  configure.ac  dag.py  doxygenConfig  index.html  index.jinja2  input-file  libbson-releases.html  (+24 more)
doc/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.include  advanced-connections.page  advanced-connections.rst  aggregate.page  aggregate.rst  api.rst  application-performance-monitoring.page  application-performance-monitoring.rst  authentication.page  authentication.rst  basic-prequisites.xml  basic-troubleshooting.page  basic-troubleshooting.rst  bulk-operations.page  bulk.page  bulk.rst  conf.py  counting-document.page  cursors.page  cursors.rst  debugging.rst  deleting-document.page  deleting-document.rst  error-api.page  errors.rst  executing-command.page  executing-command.rst  finding-document.page  finding-document.rst  githubpages.py  guides.rst  index.page  index.rst  inserting-document.page  inserting-document.rst  installing.page  installing.page.in  (+1084 more)
doc/attic/: Makefile.old  asciidoc.conf  mongoc_api.txt  mongoc_bulk_operation.txt  mongoc_bulk_operation_delete_one.txt  mongoc_bulk_operation_execute.txt  mongoc_bulk_operation_insert.txt  mongoc_bulk_operation_update_one.txt  mongoc_client_destroy.txt  mongoc_client_get_collection.txt  mongoc_client_get_gridfs.txt  mongoc_client_get_max_bson_size.txt  mongoc_client_get_server_status.txt  mongoc_client_get_write_concern.txt  mongoc_client_new.txt  mongoc_client_pool.txt  mongoc_client_pool_destroy.txt  mongoc_client_pool_new.txt  mongoc_client_pool_pop.txt  mongoc_client_pool_try_pop.txt  mongoc_client_set_read_prefs.txt  mongoc_collection_aggregate.txt  mongoc_collection_command_simple.txt  mongoc_collection_count.txt  mongoc_collection_create_bulk_operation.txt  mongoc_collection_get_last_error.txt  mongoc_collection_get_write_concern.txt  mongoc_collection_keys_to_index_string.txt  mongoc_collection_rename.txt  mongoc_collection_save.txt  mongoc_collection_stats.txt  mongoc_collection_validate.txt  mongoc_cursor_clone.txt  mongoc_cursor_current.txt  mongoc_cursor_error.txt  mongoc_database.txt  mongoc_database_destroy.txt  mongoc_database_get_collection.txt  mongoc_database_set_read_prefs.txt  mongoc_fd_set_nonblock.txt  (+28 more)
doc/html/: CMakeLists.txt  Makefile.am
doc/includes/: CMakeLists.txt  bulk-crud-opts.txt  bulk-insert-opts.txt  bulk-remove-many-opts.txt  bulk-replace-one-opts.txt  create-index-opts.txt  crud-opts.txt  delete-many-opts.txt  delete-one-opts.txt  insert-many-opts.txt  insert-one-opts.txt  read-opts.txt  read-write-opts.txt  replace-one-opts.txt  session-lifecycle.txt  update-many-opts.txt  update-one-opts.txt  write-opts.txt
doc/mallard/: advanced-connections.page  authentication.page  basic-troubleshooting.page  connecting-to-mongo.page  counters.page  deleting-document.page  executing-command.page  finding-document.page  getting-connected.page  index.page  inserting-document.page  installing-mongo-c-driver.page  mongoc_bulk_operation_delete.page  mongoc_bulk_operation_delete_one.page  mongoc_bulk_operation_destroy.page  mongoc_bulk_operation_execute.page  mongoc_bulk_operation_insert.page  mongoc_bulk_operation_replace_one.page  mongoc_bulk_operation_t.page  mongoc_bulk_operation_update.page  mongoc_bulk_operation_update_one.page  mongoc_cleanup.page  mongoc_client_command.page  mongoc_client_command_simple.page  mongoc_client_destroy.page  mongoc_client_get_collection.page  mongoc_client_get_database.page  mongoc_client_get_database_names.page  mongoc_client_get_gridfs.page  mongoc_client_get_max_bson_size.page  mongoc_client_get_max_message_size.page  mongoc_client_get_read_prefs.page  mongoc_client_get_server_status.page  mongoc_client_get_uri.page  mongoc_client_get_write_concern.page  mongoc_client_new.page  mongoc_client_new_from_uri.page  mongoc_client_pool_destroy.page  mongoc_client_pool_new.page  mongoc_client_pool_pop.page  (+203 more)
doc/man/: Makefile.am  (+1 more)
examples/: CMakeLists.txt  Makefile.am  Makefile.include  doc-common-insert.c  example-application-performance-monitoring.c  example-client.c  example-collection-watch.c  example-command-monitoring.c  example-command-with-opts.c  example-gridfs.c  example-matcher.c  example-pool.c  example-scram.c  example-sdam-monitoring.c  example-session.c  example-update.c  filter-bsondump.c  find-and-modify.c  hello_mongoc.c  index-source.c  mongoc-dump.c  mongoc-ping-with-ssl.c  mongoc-ping.c  mongoc-rpc-validate.c  mongoc-stat.c  mongoc-tail.c  parse_handshake_cfg.py
generate_uninstall/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  bcon.c  bcon.h  bson.c  bson.h  encoding.c  encoding.h  env.c  env.h  env_default.c  env_posix.c  env_standard.c  env_win32.c  gridfs.c  gridfs.h  libmongoc-1.0.pc.in  libmongoc-priv.pc.in  libmongoc-static-1.0.pc.in  libmongoc.symbols  md5.c  md5.h  mongo.c  mongo.h  mongo_except.h  net.c  net.h  numbers.c  platform.h  platform_hacks.h
tests/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.include  TestSuite.c  TestSuite.h  abicheck.sh  debug-stream.c  echo-server.c  ha-test.c  ha-test.h  json-test-monitoring.c  json-test-operations.c  json-test.c  json-test.h  mock-server.c  mock-server.h  mongoc-tests.c  mongoc-tests.h  ssl-test.c  ssl-test.h  test-bulk.c  test-conveniences.c  test-conveniences.h  test-happy-eyeballs.c  test-libmongoc.c  test-libmongoc.h  test-load.c  test-mock-server.c  test-mongoc-array.c  test-mongoc-async.c  test-mongoc-buffer.c  test-mongoc-bulk.c  test-mongoc-change-stream.c  test-mongoc-client-observer.c  test-mongoc-client-pool.c  test-mongoc-client-session.c  test-mongoc-client.c  test-mongoc-cluster.c  test-mongoc-collection-find-with-opts.c  (+60 more)
(+115948 files in other folders)
